--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -30,6 +30,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.8",
+    "formik": "^2.4.9",
     "nativewind": "5.0.0-preview.2",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
@@ -41,7 +42,8 @@
     "react-native-safe-area-context": "~5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-worklets": "~0.5.1",
-    "superjson": "2.2.3"
+    "superjson": "2.2.3",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@ssp/api": "workspace:*",
