--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -20,6 +20,7 @@
     "@trpc/client": "catalog:",
     "@trpc/server": "catalog:",
     "@trpc/tanstack-react-query": "catalog:",
+    "clsx": "^2.1.1",
     "expo": "~54.0.20",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.16",
@@ -43,6 +44,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-worklets": "~0.5.1",
     "superjson": "2.2.3",
+    "tailwind-merge": "^3.3.1",
     "zod": "catalog:"
   },
   "devDependencies": {
