feat(api): add optimization and security

--- a/turbo.json
+++ b/turbo.json
@@ -50,7 +50,8 @@
     "SUPABASE_URL",
     "SUPABASE_ANON_KEY",
     "SUPABASE_SERVICE_ROLE_KEY",
-    "PORT"
+    "PORT",
+    "LOG_FORMAT"
   ],
   "globalPassThroughEnv": [
     "NODE_ENV",
