Revert "feat(api): add optimization and security"
This reverts commit 4e0c56d6e17ea84c6fb3e3ac8a33097552294a56.

--- a/turbo.json
+++ b/turbo.json
@@ -50,8 +50,7 @@
     "SUPABASE_URL",
     "SUPABASE_ANON_KEY",
     "SUPABASE_SERVICE_ROLE_KEY",
-    "PORT",
-    "LOG_FORMAT"
+    "PORT"
   ],
   "globalPassThroughEnv": [
     "NODE_ENV",
