--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -6,7 +6,7 @@
     "clean": "git clean -xdf .cache .expo .turbo android ios node_modules",
     "dev": "expo start",
     "dev:android": "expo start --android",
-    "dev:ios": "expo start --ios",
+    "dev:ios": "expo start --ios --clear",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "format": "prettier --check . --ignore-path ../../.gitignore --ignore-path .prettierignore",
