--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -6,7 +6,7 @@
     "clean": "git clean -xdf .cache .expo .turbo android ios node_modules",
     "dev": "expo start",
     "dev:android": "expo start --android",
-    "dev:ios": "expo start --ios --clear",
+    "dev:ios": "expo start --ios",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "format": "prettier --check . --ignore-path ../../.gitignore --ignore-path .prettierignore",
@@ -39,7 +39,6 @@
     "react-dom": "catalog:react19",
     "react-native": "~0.81.5",
     "react-native-css": "3.0.1",
-    "react-native-error-boundary": "^3.1.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.3",
     "react-native-safe-area-context": "~5.6.1",
