--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -43,6 +43,7 @@
     "react-native-reanimated": "~4.1.3",
     "react-native-safe-area-context": "~5.6.1",
     "react-native-screens": "~4.16.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-worklets": "~0.5.1",
     "superjson": "2.2.3",
     "tailwind-merge": "^3.3.1",
@@ -53,7 +54,7 @@
     "@ssp/prettier-config": "workspace:*",
     "@ssp/tailwind-config": "workspace:*",
     "@ssp/tsconfig": "workspace:*",
-    "@tanstack/react-query-devtools": "catalog:",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@types/react": "catalog:react19",
     "eslint": "catalog:",
     "prettier": "catalog:",
