feat(app): lazy load omponents

--- a/apps/expo/tsconfig.json
+++ b/apps/expo/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "jsx": "react-native",
     "checkJs": false,
+    "module": "es2022",
+    "moduleResolution": "bundler",
     "moduleSuffixes": [".ios", ".android", ".native", ""],
     "paths": {
       "~/*": ["./src/*"]
