--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@hookform/resolvers": "^5.2.2",
     "@legendapp/list": "^2.0.14",
     "@ssp/api": "workspace:*",
     "@ssp/validators": "workspace:*",
@@ -33,10 +34,10 @@
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.8",
-    "formik": "^2.4.9",
     "nativewind": "5.0.0-preview.2",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
+    "react-hook-form": "^7.66.1",
     "react-native": "~0.81.5",
     "react-native-css": "3.0.1",
     "react-native-gesture-handler": "~2.28.0",
